#1586 closed defect (fixed)
ffmpeg fails to recognize mpegvideo file
| Reported by: | Shital | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mpegps regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
Unable to transcode unrecognized_mpeg_video.mpg to mp4 file.
How to reproduce:
% ffmpeg -i unrecognized_mpeg_video.mpg unrecognized_mpeg_video.mp4 ffmpeg version 0.11.1.git Copyright (c) 2000-2012 the FFmpeg developers built on Jul 30 2012 15:03:57 with gcc 4.1.2 (GCC) 20080704 (Red Hat 4.1.2-50) configuration: --disable-optimizations --disable-stripping --enable-debug=3 --extra-cflags='-O0 -fno-inline' --enable-gpl --enable-version3 --enable-zlib --enable-bzlib --enable-pthreads --enable-libvorbis --enable-libtheora --enable-libspeex --enable-libmp3lame --enable-libxvid --enable-libx264 --enable-libopencore_amrwb --enable-libopencore_amrnb --enable-libvo-aacenc --enable-libvpx --enable-libgsm --enable-libschroedinger libavutil 51. 65.100 / 51. 65.100 libavcodec 54. 44.100 / 54. 44.100 libavformat 54. 20.100 / 54. 20.100 libavdevice 54. 2.100 / 54. 2.100 libavfilter 3. 3.100 / 3. 3.100 libswscale 2. 1.100 / 2. 1.100 libswresample 0. 15.100 / 0. 15.100 libpostproc 52. 0.100 / 52. 0.100 unrecognized_mpeg_video.mpg: Invalid data found when processing input
However forcing the file format works i.e. following command succeeds:
ffmpeg -f mpegvideo -i 6484146813_e2004558a3.mpg 6484146813_e2004558a3.mp4
I have put source file 6484146813_e2004558a3.mpg on the ftp server under incoming dir.
Attachments (1)
Change History (4)
by , 14 years ago
| Attachment: | unrecognized_mpeg_video.mpg added |
|---|
comment:1 by , 14 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | mpegps regression added |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
Regression since r19854 / c4674a4.
comment:2 by , 14 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



mpegvideo not recognized