mpegdemux: Fix probing of unrecognized_mpeg_video.mpg

Fixes Ticket1586

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>